Footer fix, width of story fix

--- a/_static/base.html
+++ b/_static/base.html
@@ -42,16 +42,25 @@
 	<footer class="bottom">
 		<div class="wrap">
 			<div class="info clearfix">
-				<div class="two-thirds left">
+				<div class="half left">
 					<div class="inner">
-						<p>This work is licensed under a <a href="http://creativecommons.org/licenses/by-sa/4.0/" target="_blank" rel="nofollow">Creative Commons Attribution-ShareAlike 4.0 International License</a></p>
-						<br>
-						<p>  <a href="/data.json" target="_blank">Export the raw data</a> behind this site.</p>
+						<small>This site is a project of <a href="https://codeforkenya.org/" target="_blank">Code for Kenya</a>. All content is released under a <a href="https://creativecommons.org/licenses/by/4.0/" target="_blank">Creative Commons 4 Attribution license</a>. Page code is available <a href="https://github.com/CodeForAfrica/TaxClock.Kenya/" target="_blank">on GitHub</a>.</small>
+						<small><a href="/data.json" target="_blank">Export the raw data</a> behind this site.</small>
 					</div>
 				</div>
-				<div class="third right txt-right">
-					<a href="https://codeforkenya.org/" class="footer-logo cfk"></a>
-					<a href="https://www.hivos.org/" class="footer-logo hivos"></a>
+				<div class="half left">
+					<div class="half left">
+						<ul>
+							<li><a href="http://openafrica.net/" target="_blank">openAFRICA</a></li>
+							<li><a href="https://pesacheck.org/" target="_blank">PesaCheck</a></li>
+							<li><a href="https://taxclock.codeforkenya.org/" target="_blank">Tax Clock</a></li>
+							<li><a href="https://facebook.com/HacksHackersAfrica" target="_blank">Hacks/Hackers Africa</a></li>
+						</ul>
+					</div>
+					<div class="half right txt-right">
+						<a href="https://codeforkenya.org/" class="footer-logo"><img src="assets/img/cfkenya_blue.png" height="70px;"/></a>
+						<a href="https://www.hivos.org/" class="footer-logo"><img src="assets/img/hivos.png" height="80px;"/></a>
+					</div>
 				</div>
 			</div>
 		</div>
