--- a/_static/story.html
+++ b/_static/story.html
@@ -1,14 +1,14 @@
 {% extends 'base.html' %}
 {% block content %}
-<section class="prompt cover">
-	<div class="wrap clearfix" style="padding: 60px 0 14px;width:65%;">
-		<h1 id="title" style="font-size:42px;">How MCAs mandazi Addiction Is Killing Kenya's Poorest</h1>
-		<small style="font-size:12px;"> Otiato Guguyu, 4th Aug 2016</small>
+<section class="prompt cover story-cover">
+	<div class="wrap clearfix" style="">
+		<h1 id="title">How MCAs mandazi Addiction Is Killing Kenya's Poorest</h1>
+		<small> Otiato Guguyu, 4th Aug 2016</small>
 	</div>
 </section><!--/ prompt -->
 
-<section style="padding:20px 0px;">
-	<div class="wrap story-wrap" style="width:65%;">
+<section class="story-content">
+	<div class="wrap">
 		<p>Kenya only has only eight fully equipped MRI facilities where you can get radiation treatment for cancer— one in each of the eight provincial and referral hospitals and two at the Aga Khan Hospital and Nairobi Hospital.</p><br clear="all"><br clear="all">
 		<p> These ten MRI facilities are expected to serve 44 million Kenyans. According to the Kenya Cancer Network and the World Health Organisation, there are an estimated 40,000 new Cancer cases reported every year and 28,000 deaths due to cancer annually making the disease the third leading cause of mortality. Cancer deaths account for 7 per cent of all annual deaths.</p><br clear="all"><br clear="all">
 		<p>Global standards are ten to fifteen machines per one million inhabitants. In Kenya, there is one machine for every 4.4 million people.</p><br clear="all"><br clear="all">
