--- a/_static/story2.html
+++ b/_static/story2.html
@@ -1,14 +1,14 @@
 {% extends 'base.html' %}
 {% block content %}
-<section class="prompt cover">
-	<div class="wrap clearfix" style="padding: 60px 0 14px;width:65%;">
-		<h1 id="title" style="font-size:42px;">From loan to mouth: Kenya’s debt economy</h1>
-		<small style="font-size:12px;"> Otiato Guguyu, 4th Aug 2016</small>
+<section class="prompt cover story-cover">
+	<div class="wrap clearfix">
+		<h1 id="title">From loan to mouth: Kenya’s debt economy</h1>
+		<small> Otiato Guguyu, 4th Aug 2016</small>
 	</div>
 </section><!--/ prompt -->
 
-<section style="padding:20px 0px;">
-	<div class="wrap story-wrap" style="width:65%;">
+<section class="story-content">
+	<div class="wrap">
         <p>Kenyans have over the years continued to consume more than they have and saving little.</p><br clear="all"><br clear="all">
         <p>According to the Kenya National Bureau of statistics, gross savings decreased by 2 per cent from Sh426,283 million in 2011 to  Sh419,052 million in 2012. KNBS says the rate of savings has stagnated and remains far below the medium term targets.</p><br clear="all"><br clear="all">
         <p>With formal employment at a near standstill and with jobs in the informal sector offering less than living wages, most Kenyans particularly those in the urban areas have become dependent on borrowing to make ends meet.</p><br clear="all"><br clear="all">
