--- a/_static/story4.html
+++ b/_static/story4.html
@@ -1,14 +1,14 @@
 {% extends 'base.html' %}
 {% block content %}
-<section class="prompt cover">
-	<div class="wrap clearfix" style="padding: 60px 0 14px;width:65%;">
-		<h1 id="title" style="font-size:42px;">MCAs spend billions on foreign trips</h1>
-		<small style="font-size:12px;"> Otiato Guguyu, 4th Aug 2016</small>
+<section class="prompt cover story-cover">
+	<div class="wrap clearfix">
+		<h1 id="title">MCAs spend billions on foreign trips</h1>
+		<small> Otiato Guguyu, 4th Aug 2016</small>
 	</div>
 </section><!--/ prompt -->
 
-<section style="padding:20px 0px;">
-	<div class="wrap story-wrap" style="width:65%;">
+<section class="story-content">
+	<div class="wrap">
         <p>The race seems to be on to get as many frequent flyer miles as county assembly members and governors continue with their ‘bench-making’ foreign travels.</p><br clear="all"/><br clear="all"/>
         <p>As at December 2015, county governments had spent Sh4.58 billion of taxpayers money on domestic and foreign travel. This is against the approved annual budget of Sh10.55 billion.</p><br clear="all"/><br clear="all"/>
         <p>The top three counties between them spent Sh673.28m which is 11 times the total spend of the three counties that spent the least. Nairobi spent (Sh286.99 million), Nakuru (Sh197.30m) Bungoma ( Sh188.99 million) on foreign and domestic travel while Mandera, Narok and Kwale at Sh33.14 million, Sh14.97 million and Sh12.46 million respectively. </p><br clear="all"/><br clear="all"/>
