--- a/_static/story3.html
+++ b/_static/story3.html
@@ -1,14 +1,14 @@
 {% extends 'base.html' %}
 {% block content %}
-<section class="prompt cover">
-	<div class="wrap clearfix" style="padding: 60px 0 14px;width:65%;">
-		<h1 id="title" style="font-size:42px;">Feeding frenzy as counties spend millions on ‘hospitality.’</h1>
-		<small style="font-size:12px;"> Otiato Guguyu, 4th Aug 2016</small>
+<section class="prompt cover story-cover">
+	<div class="wrap clearfix">
+		<h1 id="title">Feeding frenzy as counties spend millions on ‘hospitality.’</h1>
+		<small> Otiato Guguyu, 4th Aug 2016</small>
 	</div>
 </section><!--/ prompt -->
 
-<section style="padding:20px 0px;">
-	<div class="wrap story-wrap" style="width:65%;">
+<section class="story-content">
+	<div class="wrap">
         <p>Do you know how much your county has been spending on tea, mandazi, samosas and hot lunches for your MCAs and governors? </p><br clear="all"><br clear="all">
         <p>Are you aware that the national and county governments have allocated huge chunks of the taxes they collect from you everyday for catering services (receptions), accommodation, gifts, food and drinks ?</p><br clear="all"><br clear="all">
         <p>Since devolution started in 2013, counties have year on year been increasing their budget allocation for these services. </p><br clear="all"><br clear="all">
