Basic start to the page.

--- a/_static/index.html
+++ b/_static/index.html
@@ -8,10 +8,13 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, minimum-scale=1.0">
 	<title>Biscuit Index</title>
-	<script src="assets/js/modernizr-2.6.2.min.js"></script>
+	
+	<link rel="stylesheet" href="assets/css/bootstrap.min.css" type="text/css" />
 	<link rel="stylesheet" href="assets/css/css.css" type="text/css" />
-	<link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet' type='text/css'>
-	<link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico">
+	
+
+	<script src="assets/js/modernizr-2.6.2.min.js"></script>
+	
 	<script>
 		var comparatives = "{{comparatives|safe}}";
 	</script>
@@ -192,8 +195,9 @@
 	</footer><!--/ bottom -->
 		
 	<script src="assets/js/jquery-1.8.1.min.js"></script>
+	<script src="assets/js/bootstrap.min.js"></script>
 	<script src="assets/js/libs.js"></script>
-    <script src="assets/js/js.js"></script>
+  <script src="assets/js/js.js"></script>
 
 	<script type="text/javascript">
 		// extract county hospitality budget from JSON 
