Responsive and added bootstrap.

--- a/_static/base.html
+++ b/_static/base.html
@@ -36,8 +36,8 @@
 		</div>
 	</header><!--/ top -->
 
-    {% block content %}
-    {% endblock %}
+  {% block content %}
+  {% endblock %}
 
 	<footer class="bottom">
 		<div class="wrap">
@@ -64,7 +64,7 @@
 				</div>
 			</div>
 		</div>
-	</footer><!--/ bottom -->
+	</footer><!-- /footer -->
     <script src="assets/js/jquery-1.8.1.min.js"></script>
     <script>
         text = $('#title').html() + ' ' + window.location.href
