--- a/_static/story4.html
+++ b/_static/story4.html
@@ -1,28 +1,25 @@
-{% extends 'base.html' %}
-{% block content %}
-<section class="prompt cover story-cover">
-	<div class="wrap clearfix">
-		<h1 id="title">MCAs spend billions on foreign trips</h1>
-		<small> Otiato Guguyu, 4th Aug 2016</small>
-	</div>
-</section><!--/ prompt -->
+{% extends 'layout/story.html' %}
 
-<section class="story-content">
-	<div class="wrap">
-        <p>The race seems to be on to get as many frequent flyer miles as county assembly members and governors continue with their ‘bench-making’ foreign travels.</p><br clear="all"/><br clear="all"/>
-        <p>As at December 2015, county governments had spent Sh4.58 billion of taxpayers money on domestic and foreign travel. This is against the approved annual budget of Sh10.55 billion.</p><br clear="all"/><br clear="all"/>
-        <p>The top three counties between them spent Sh673.28m which is 11 times the total spend of the three counties that spent the least. Nairobi spent (Sh286.99 million), Nakuru (Sh197.30m) Bungoma ( Sh188.99 million) on foreign and domestic travel while Mandera, Narok and Kwale at Sh33.14 million, Sh14.97 million and Sh12.46 million respectively. </p><br clear="all"/><br clear="all"/>
-        <p>Most of the foreign trips are for ‘bench-marking’ purposes to India, Singapore, China, Switzerland, Israel and Dubai.  </p><br clear="all"/><br clear="all"/>
-        <p>For example, in its 2016/17 budget Vihiga has proposed setting aside Sh20 million for ‘comparative trips’ to Germany, South Africa, the UK. Rwanda, Brazil and Switzerland.</p><br clear="all"/><br clear="all"/>
-        <p>Choice destinations for the MCAs include Uganda, Rwanda and South Africa with Mombasa the preferred destination when it comes to domestic travel.</p><br clear="all"/><br clear="all"/>
-        <p>Total government spending on domestic travel stood at Sh5.3 billion, up from Sh3.9 billion the previous year while foreign travel cost the taxpayer Sh2.6 billion up from Sh2.2 billion, according to the report by the Controller of Budget.</p><br clear="all"/><br clear="all"/>
-        <p>For instance, the budget capped the cost of the presidency’s foreign trips at Sh1.2 billion in the financial year that ended in June 2015.</p><br clear="all"/><br clear="all"/>
-        <p>The presidency, which combines Mr Kenyatta’s office and that of Deputy President William Ruto, spent Sh2.1 billion on travel and hospitality in the financial year ending in June 2015 — 75 per cent higher than the figures for a similar period last financial year.</p><br clear="all"/><br clear="all"/>
-        <p>The president and his deputy continue to rack up air miles just as much as governors and Members of the County Assemblies who have used any opportunity and excuse to travel all over the world for ‘bench-making’ and ‘familiarisation visits’ which have no direct benefit to the people in their counties.</p><br clear="all"/><br clear="all"/>
-        <p>The presidency continues to receive an ever expanding allocation for hospitality with the supplementary budget made this year adding an extra Sh212 million to the kitty for domestic travel and entertainment.</p><br clear="all"/><br clear="all"/>
-        <p>In April, Treasury Secretary Henry Rotich presented a mini-budget where he sought Parliament’s approval after Uhuru exhausted and overshot his domestic travel budget allocation by Sh300 million. At the same time, he announced his intention to cut development spending by Sh49.1 billion while increasing the recurrent budget by Sh8.1 billion.</p><br clear="all"/><br clear="all"/>
-        <p>In the six months prior to December 2015, the presidency spent Sh208.1 million on domestic travel and another Sh111.2 million on international travel. </p><br clear="all"/><br clear="all"/>
-        <p>The directive that county governments show some restraint on their foreign and domestic trips rings false when compared to the billions that Uhuru has spent on the close to 50 foreign trips he has made in the last four years.</p><br clear="all"/><br clear="all"/>
-	</div>
-</section>
+{% block story_headline %}
+<h1>MCAs spend billions on foreign trips</h1>
+<p>Otiato Guguyu, 4th Aug 2016</p>
+{% endblock %}
+
+{% block story_content %}
+
+<p>The race seems to be on to get as many frequent flyer miles as county assembly members and governors continue with their ‘bench-making’ foreign travels.</p>
+<p>As at December 2015, county governments had spent Sh4.58 billion of taxpayers money on domestic and foreign travel. This is against the approved annual budget of Sh10.55 billion.</p>
+<p>The top three counties between them spent Sh673.28m which is 11 times the total spend of the three counties that spent the least. Nairobi spent (Sh286.99 million), Nakuru (Sh197.30m) Bungoma ( Sh188.99 million) on foreign and domestic travel while Mandera, Narok and Kwale at Sh33.14 million, Sh14.97 million and Sh12.46 million respectively. </p>
+<p>Most of the foreign trips are for ‘bench-marking’ purposes to India, Singapore, China, Switzerland, Israel and Dubai.  </p>
+<p>For example, in its 2016/17 budget Vihiga has proposed setting aside Sh20 million for ‘comparative trips’ to Germany, South Africa, the UK. Rwanda, Brazil and Switzerland.</p>
+<p>Choice destinations for the MCAs include Uganda, Rwanda and South Africa with Mombasa the preferred destination when it comes to domestic travel.</p>
+<p>Total government spending on domestic travel stood at Sh5.3 billion, up from Sh3.9 billion the previous year while foreign travel cost the taxpayer Sh2.6 billion up from Sh2.2 billion, according to the report by the Controller of Budget.</p>
+<p>For instance, the budget capped the cost of the presidency’s foreign trips at Sh1.2 billion in the financial year that ended in June 2015.</p>
+<p>The presidency, which combines Mr Kenyatta’s office and that of Deputy President William Ruto, spent Sh2.1 billion on travel and hospitality in the financial year ending in June 2015 — 75 per cent higher than the figures for a similar period last financial year.</p>
+<p>The president and his deputy continue to rack up air miles just as much as governors and Members of the County Assemblies who have used any opportunity and excuse to travel all over the world for ‘bench-making’ and ‘familiarisation visits’ which have no direct benefit to the people in their counties.</p>
+<p>The presidency continues to receive an ever expanding allocation for hospitality with the supplementary budget made this year adding an extra Sh212 million to the kitty for domestic travel and entertainment.</p>
+<p>In April, Treasury Secretary Henry Rotich presented a mini-budget where he sought Parliament’s approval after Uhuru exhausted and overshot his domestic travel budget allocation by Sh300 million. At the same time, he announced his intention to cut development spending by Sh49.1 billion while increasing the recurrent budget by Sh8.1 billion.</p>
+<p>In the six months prior to December 2015, the presidency spent Sh208.1 million on domestic travel and another Sh111.2 million on international travel. </p>
+<p>The directive that county governments show some restraint on their foreign and domestic trips rings false when compared to the billions that Uhuru has spent on the close to 50 foreign trips he has made in the last four years.</p>
+
 {% endblock %}
