--- a/_static/index.html
+++ b/_static/index.html
@@ -204,6 +204,17 @@
 		// and assign it here. The rest is magic.
 		var countyBudgetInteger = '{{ biscuit_budget }}',
 		countyBudgetString 	= '{{ biscuit_budget_str }}';
-	</script>
+    </script>
+
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-44795600-25', 'auto');
+      ga('send', 'pageview');
+
+    </script> 
 </body>
 </html>
