--- a/_static/base.html
+++ b/_static/base.html
@@ -44,7 +44,7 @@
 			<div class="info clearfix">
 				<div class="half left">
 					<div class="inner">
-						<small>This site is a project of <a href="https://codeforkenya.org/" target="_blank">Code for Kenya</a>. All content is released under a <a href="https://creativecommons.org/licenses/by/4.0/" target="_blank">Creative Commons 4 Attribution license</a>. Page code is available <a href="https://github.com/CodeForAfrica/TaxClock.Kenya/" target="_blank">on GitHub</a>.</small>
+						<small>This site is a project of <a href="https://codeforkenya.org/" target="_blank">Code for Kenya</a>. All content is released under a <a href="https://creativecommons.org/licenses/by/4.0/" target="_blank">Creative Commons 4 Attribution license</a>. Page code is available <a href="https://github.com/CfKenya-KMP/biscuit_index" target="_blank">on GitHub</a>.</small>
 						<small><a href="/data.json" target="_blank">Export the raw data</a> behind this site.</small>
 					</div>
 				</div>
