remove redundant html file | replace a featured story

--- a/_static/home.html
+++ b/_static/home.html
@@ -139,9 +139,9 @@
       <div class="col-sm-12 visible-xs" style="height:20px;"></div>
       <div class="col-sm-3">
         <h4>
-          <a href="/from-loan-to-mouth">From loan to mouth: Kenya’s debt economy</a>
+          <a href="/mcas-malaria-budget">What MCAs tea budget can do to help fight Malaria in their counties</a>
         </h5>
-        <p>Kenyans have over the years continued to consume more than they have and saving little.</p>
+        <p>Eight out of every ten people are at risk of catching Malaria.  On average, a malaria-stricken family spends an estimated quarter of its income on malaria treatment not only on medication but also due to loss of income</p>
         <p><a class="btn btn-sm btn-primary" href="/from-loan-to-mouth">READ MORE</a></p>
       </div>
       <div class="col-sm-12 visible-xs" style="height:20px;"></div>
