--- a/_static/story2.html
+++ b/_static/story2.html
@@ -1,33 +1,20 @@
 {% extends 'layout/story.html' %}
 
 {% block story_headline %}
-<h1>From loan to mouth: Kenya’s debt economy</h1>
+<h1>What MCAs tea budget can do to help fight Malaria in their counties</h1>
 <p> Otiato Guguyu, 4th Aug 2016</p>
 {% endblock %}
 
 {% block story_content %}
 
-<p>Kenyans have over the years continued to consume more than they have and saving little.</p>
-<p>According to the Kenya National Bureau of statistics, gross savings decreased by 2 per cent from Sh426,283 million in 2011 to  Sh419,052 million in 2012. KNBS says the rate of savings has stagnated and remains far below the medium term targets.</p>
-<p>With formal employment at a near standstill and with jobs in the informal sector offering less than living wages, most Kenyans particularly those in the urban areas have become dependent on borrowing to make ends meet.</p>
-<p>Mobile lending platforms are giving small loan volumes of Sh1000 up to Sh50,000 like Tala, Branch, Saida and Mombo Mobile, are on the increase.</p>
-<p>Banks have not been left behind and have developed numerous products such as CBA’s M-Shwari, Cooperative Bank’s M-Co-op Cash, Kenya Commercial Bank’s KCB M-Pesa, and Equity Bank’s Equitel.</p>
-<p>For others, the promise of easy cash by winning lotteries such as SportsPesa, BetWay, BetIn etc provides them with hope their living standards can improve.</p>
-<p>Many others are stuck in the debt cycles borrowing to pay an older loan or as a typical ‘pay day loan’ — they retire the old debt once they get paid and go immediately into the next one.</p>
-<p>Tala says that repayment rates are more than 95 per cent and more than 90 per cent of the customers return for a second loan a clear indication that most of their clients came back for new loans to offset the old ones creating a cycle of dependency on the pay day loans.</p>
-<p>This perhaps explains why most Kenyans are living way beyond their earnings and are dependent on loans to make ends meet.</p>
-<p>Data from the 2016 Economic Survey, shows the consumption rate in Kenya was 102 per cent of income in 2013, 103 per cent in 2014 and 102 per cent in 2015.</p>
-<p>When consumption goes above 100 per cent of income, it means that people are not saving any money but are spending what they had saved earlier or borrowing to make ends meet.</p>
-<p> In 2005/06, the poverty line was estimated at Sh1,562 and Sh2,913 per adult equivalent per month for rural and urban households respectively. </p>
-<p>Nationally, 45.2 percent of the population lives below the poverty line (2009 estimates), down from 46 percent in 2005/06.</p>
-<p>There is a huge discrepancy between the mean expenditure per adult across wards within a county.  In 44 of the 47 counties, the mean expenditure in the poorest wards is less than 40 percent the mean expenditure in the wealthiest wards within the county. Kilifi and Kwale, the mean expenditure in the poorest wards (Garashi and Ndavaya, respectively) is less than 13 percent of expenditure in the wealthiest ward in the county.</p>
-<p>Of the five poorest counties in terms of mean expenditure, four are in the North (Mandera, Wajir, Turkana and Marsabit) and the last is in Coast (Tana River). However, of the five most unequal counties, only one (Marsabit County) is in the North (looking at ratio of mean expenditure in richest to poorest ward). The other four most unequal counties by this measure are: Kilifi, Kwale, Kajiado and Kitui.</p>
-<p>According to the Kenya National Bureau of Statistics while net national borrowing accelerated from Sh190 billion in 2010 to Sh579 billion in 2015, savings only rose from Sh83 billion in 2010 to Sh121 billion in 2011, but then plummeted below zero from 2013 onwards.</p>
-<p>Most of the money being borrowed goes mainly to food with the majority of Kenyans spending 44 per cent of their domestic income on food every month.</p>
-<p>Spending a large portion of one’s income on food and drink — which are needed for basic survival — is an indicator of poverty. Such a spending pattern means that little money is left over to be spent on other things that are important for quality life, including clothing, shelter and transportation.</p>
-<p>Indeed, spending on clothing and shoes was equivalent to five per cent of the expenditure on food and beverages. That means for every Sh45 that Kenyans were spending on food, they were spending about Sh2.50 on clothes and shoes.</p>
-<p>An earlier study by the Kenya National Housing Survey  in 2013 showed that most urban residents spend 44.7 per cent of their incomes on basic rent, electricity, water, sewerage, security and garbage collection,leaving them with very little left to do anything else.</p>
-
-<p>With stagnant incomes and rising inflation people need more money to afford the same things such as food and other necessities.</p>
+<p> Eight out of every ten people are at risk of catching Malaria.  On average, a malaria-stricken family spends an estimated quarter of its income on malaria treatment not only on medication but also due to loss of income. </p>
+<p> The most effective and most commonly prescribed  medication for the treatment of uncomplicated Malaria is Artemisinin- based combination therapies (ACTS) which cost between Sh200 and Sh250 for an adult treatment dose. </p>
+<p> At least 1 million adults who are sick with Malaria would be treated if the Sh241.9 million being spent hospitality/catering by counties was spent on buying Malaria drugs.</p>
+<p> According to UNICEF estimates, Malaria afflicted families can only harvest 40 per cent of the crops harvested by healthy families. And as many as 60 per cent of the children in Malaria endemic counties miss school due to absenteeism caused by repeated bouts of malaria.</p>
+<p> It accounts for 30- 50 per cent of all outpatient attendance and 20 per cent of all admissions. The Ministry of Health estimates that at least 170 million working days are lost every year due to the disease. </p>
+<p> The amount could also buy  insecticide treated nets which can help prevent  29,000 people including children and pregnant women from catching Malaria. The universal use of insecticide-treated bed-nets has been found to reduce episodes of illness by 50%. </p>
+<p> One of the challenges is to increase the use of nets in Kenyan households. Slightly over half of the children under five years <a href="https://www.dhsprogram.com/pubs/pdf/SR227/SR227.pdf">sleep under a net</a>. To increase the use of nets for children and pregnant mothers, the cost of the nets has been heavily subsidised through bilateral Malaria programme with the UK government.</p>
+<p> The subsidised treated nets cost between Sh50 and Sh150 per net. A similar net in the supermarket sells for between Sh1,450 to Sh1,650. </p>
+<p> The UK government intends to ends its support for the programme this year. If the county governments halved their hospitality and catering, it could subsidise the cost of 806,000 nets and prevent at least 403,000 poorest people in Malaria endemic counties from becoming sick.</p>
 
 {% endblock %}
