replaced another featured story

--- a/_static/home.html
+++ b/_static/home.html
@@ -128,8 +128,8 @@
 <section class="stories">
   <div class="container">
     <h3 class="page-header">Featured Stories</h3>
-    <div class="row">
-      <div class="col-sm-3">
+    <div class="row" style="float: left">
+      <div class="col-sm-4">
         <h4>
           <a href="/how-mcas-mandazi-addiction-is-killing-kenyas-poorest">How MCAs mandazi Addiction Is Killing Kenya's Poorest</a>
         </h5>
@@ -137,15 +137,15 @@
         <p><a class="btn btn-sm btn-primary" href="/how-mcas-mandazi-addiction-is-killing-kenyas-poorest">READ MORE</a></p>
       </div>
       <div class="col-sm-12 visible-xs" style="height:20px;"></div>
-      <div class="col-sm-3">
+      <div class="col-sm-4">
         <h4>
           <a href="/mcas-malaria-budget">What MCAs tea budget can do to help fight Malaria in their counties</a>
         </h5>
-        <p>Eight out of every ten people are at risk of catching Malaria.  On average, a malaria-stricken family spends an estimated quarter of its income on malaria treatment not only on medication but also due to loss of income</p>
-        <p><a class="btn btn-sm btn-primary" href="/from-loan-to-mouth">READ MORE</a></p>
+        <p>Eight out of every ten people are at risk of catching Malaria.  On average, a malaria-stricken family spends an estimated...</p>
+        <p><a class="btn btn-sm btn-primary" href="/mcas-malaria-budget">READ MORE</a></p>
       </div>
       <div class="col-sm-12 visible-xs" style="height:20px;"></div>
-      <div class="col-sm-3">
+      <div class="col-sm-4">
         <h4>
           <a href="/feeding-frenzy-as-counties-spend-millions-on-hospitality">Feeding frenzy as counties spend millions on ‘hospitality’</a>
         </h5>
@@ -153,12 +153,13 @@
         <p><a class="btn btn-sm btn-primary" href="/feeding-frenzy-as-counties-spend-millions-on-hospitality">READ MORE</a></p>
       </div>
       <div class="col-sm-12 visible-xs" style="height:20px;"></div>
-      <div class="col-sm-3">
+      <div class="col-md-12"><hr></div>
+      <div class="col-sm-4">
         <h4>
-          <a href="/mcas-spend-billions-on-foreign-trips">MCAs spend billions on foreign trips</a>
+          <a href="/county-spending-arv">How counties spend on tea can buy ARVs for 6,000 HIV people</a>
         </h5>
-        <p>The race seems to be on to get as many frequent flyer miles as county assembly members and governors continue ...</p>
-        <p><a class="btn btn-sm btn-primary" href="/mcas-spend-billions-on-foreign-trips">READ MORE</a></p>
+        <p>Nearly one in three persons newly infected with HIV is a teenager or youth, aged between 15-24 years...</p>
+        <p><a class="btn btn-sm btn-primary" href="/county-spending-arv">READ MORE</a></p>
       </div>
     </div>
   </div>
