--- a/_static/story4.html
+++ b/_static/story4.html
@@ -1,25 +1,19 @@
 {% extends 'layout/story.html' %}
 
 {% block story_headline %}
-<h1>MCAs spend billions on foreign trips</h1>
+<h1>How counties spend on tea can buy ARVs for 6,000 HIV people</h1>
 <p>Otiato Guguyu, 4th Aug 2016</p>
 {% endblock %}
 
 {% block story_content %}
 
-<p>The race seems to be on to get as many frequent flyer miles as county assembly members and governors continue with their ‘bench-making’ foreign travels.</p>
-<p>As at December 2015, county governments had spent Sh4.58 billion of taxpayers money on domestic and foreign travel. This is against the approved annual budget of Sh10.55 billion.</p>
-<p>The top three counties between them spent Sh673.28m which is 11 times the total spend of the three counties that spent the least. Nairobi spent (Sh286.99 million), Nakuru (Sh197.30m) Bungoma ( Sh188.99 million) on foreign and domestic travel while Mandera, Narok and Kwale at Sh33.14 million, Sh14.97 million and Sh12.46 million respectively. </p>
-<p>Most of the foreign trips are for ‘bench-marking’ purposes to India, Singapore, China, Switzerland, Israel and Dubai.  </p>
-<p>For example, in its 2016/17 budget Vihiga has proposed setting aside Sh20 million for ‘comparative trips’ to Germany, South Africa, the UK. Rwanda, Brazil and Switzerland.</p>
-<p>Choice destinations for the MCAs include Uganda, Rwanda and South Africa with Mombasa the preferred destination when it comes to domestic travel.</p>
-<p>Total government spending on domestic travel stood at Sh5.3 billion, up from Sh3.9 billion the previous year while foreign travel cost the taxpayer Sh2.6 billion up from Sh2.2 billion, according to the report by the Controller of Budget.</p>
-<p>For instance, the budget capped the cost of the presidency’s foreign trips at Sh1.2 billion in the financial year that ended in June 2015.</p>
-<p>The presidency, which combines Mr Kenyatta’s office and that of Deputy President William Ruto, spent Sh2.1 billion on travel and hospitality in the financial year ending in June 2015 — 75 per cent higher than the figures for a similar period last financial year.</p>
-<p>The president and his deputy continue to rack up air miles just as much as governors and Members of the County Assemblies who have used any opportunity and excuse to travel all over the world for ‘bench-making’ and ‘familiarisation visits’ which have no direct benefit to the people in their counties.</p>
-<p>The presidency continues to receive an ever expanding allocation for hospitality with the supplementary budget made this year adding an extra Sh212 million to the kitty for domestic travel and entertainment.</p>
-<p>In April, Treasury Secretary Henry Rotich presented a mini-budget where he sought Parliament’s approval after Uhuru exhausted and overshot his domestic travel budget allocation by Sh300 million. At the same time, he announced his intention to cut development spending by Sh49.1 billion while increasing the recurrent budget by Sh8.1 billion.</p>
-<p>In the six months prior to December 2015, the presidency spent Sh208.1 million on domestic travel and another Sh111.2 million on international travel. </p>
-<p>The directive that county governments show some restraint on their foreign and domestic trips rings false when compared to the billions that Uhuru has spent on the close to 50 foreign trips he has made in the last four years.</p>
+<p> Nearly one in three persons newly infected with HIV is a teenager or youth, aged between 15-24 years.  </p>
+<p> Every day, 800 people get infected. They join the ranks of the 1.6 million who are living with the disease.  </p>
+<p> While most of those who find out their HIV-positive status go ahead to seek life-saving antiretroviral therapy treatment, not many of them are able to afford the cost of the ARVs which can prolong their lives. </p>
+<p> The cost of the the life-saving drugs recommended by the WHO cost between Sh61,000 and Sh105,000 per person per year (for originals) while generics cost between Sh21,000 and Sh26,000 per person per year.  </p>
+<p> This is too expensive for many of those who are HIV-infected. As it is, only a quarter of the children who need the drugs to stay alive are receiving the medicines.  </p>
+<p> On average, it  is <a href="http://www.standardmedia.co.ke/article/2000208945/sustainable-financing-for-hiv-is-possible">costing the government</a> $200 per person per year to deliver generics ARV to the 940,000 HIV enrolled in the ARV programme.  </p>
+<p> The government has to double its Sh18.4bn if it is to be able to purchase ARVs deliver and conduct the necessary laboratory tests for the 1.6 million people living with HIV.</p>
+<p> UNAIDS says the rate of new infections — new people get infected— falls by on per cent everytime there is an increase in those receiving ARVs. If the county staff cut their coffee, tea and lunches budget by half, the money be enough to buy ARVS for 6,000 people living with HIV or give 12,000 HIV Kenyans with a living chance.  </p>
 
 {% endblock %}
