--- a/embed/basic.html
+++ b/embed/basic.html
@@ -1,4 +1,13 @@
 ---
 layout: embed
+
+stylesheets:
+  - https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/css/select2.min.css
+javascripts:
+  - https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/js/select2.min.js
+  - /js/biscuitindex.js
 ---
 
+<div class="container text-center">
+  <select class="bi-county"></select>
+</div>
